# llm-study

./: .gitignore  pyproject.toml
llm_study/: __init__.py  trulens_feedbacks.py  trulens_for_marvin.py  trulens_freeform.py
notebooks/: avoid_carbs.ipynb  custom_selectors.ipynb  npc_chain.ipynb  npc_chain_custom.ipynb  save_fb_df.ipynb  test_npc_chat.ipynb  trulens.ipynb  trulens_custom_app.ipynb  trulens_for_marvin.ipynb
