[tool.poetry]
name = "llm-study"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "llm_study"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
langchain = "^0.0.247"
faiss-cpu = "^1.7.4"
openai = "^0.27.8"
tiktoken = "^0.4.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
